added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Standard-Practices.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Standard-Practices.ipynb
@@ -8,10 +8,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### Diffusion models are a unique class of generative models utilized in machine learning, specifically designed to produce new images that mimic those found in the training set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
