added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
@@ -19,6 +19,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Benefits of Role Prompting\n",
+    "\n",
+    "#### Role prompting helps narrow down the AI’s responses, ensuring more focused, contextually appropriate, and tailored results. It can also enhance creativity by pushing the AI to think and respond from unique perspectives.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenges of Role Prompting\n",
+    "\n",
+    "#### Role prompting can pose certain challenges. There might be potential risks for bias or stereotyping based on the role assigned. Assigning stereotyped roles can lead to generating biased responses, which could harm usability or offend individuals. Additionally, maintaining consistency in the role throughout an extended interaction can be difficult. The model might drift off-topic or respond with information irrelevant to the assigned role."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
