added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
@@ -38,6 +38,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Give GPTs “Thinking Time”\n",
+    "#### Often, by explicitly guiding an LLM to derive solutions from first principles before reaching a verdict, you can garner more accurate responses. Providing an LLM with thinking time can often lead to better results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
