added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Text-Generation.ipynb
@@ -46,6 +46,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The Inner Monologue Tactic\n",
+    "#### The inner monologue tactic instructs the model to structure parts of the output that should be hidden from the user in a specific format. This makes it easy to remove these parts before presenting the final output to the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Self-Eval LLM Responses\n",
+    "#### Another tactic you can use is to critque a generated LLM output and ask whether the LLM missed any information or important facts. You’re essentially asking an LLM to evaluate itself based on its previous output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
