added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Lang-Chain.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Lang-Chain.ipynb
@@ -10,6 +10,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## LangChain Prompt Templates\n",
+    "\n",
+    "#### Up until this point, you’ve been hardcoding the strings in the ChatOpenAI objects. As your LLM applications grow in size, it becomes increasingly important to utilize prompt templates.\n",
+    "\n",
+    "#### Prompt templates are good for generating reproducible prompts for AI language models. They consist of a template, a text string that can take in parameters, and construct a text prompt for a language model. Without prompt templates, you would likely use Python f-string formatting:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
