added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Lang-Chain.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Lang-Chain.ipynb
@@ -21,6 +21,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Task Decomposition\n",
+    "\n",
+    "#### Task decomposition is the strategic process of dissecting complex problems into a suite of manageable subproblems. This approach aligns seamlessly with the natural tendencies of software engineers, who often conceptualize tasks as interrelated subcomponents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
