--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -19,6 +19,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### The ability to query based on similarity is extremely useful, and vector search powers a lot of AI functionality. For example:\n",
+    "\n",
+    "### Document reading\n",
+    "- Find related sections of text to read in order to provide a more accurate answer.\n",
+    "\n",
+    "### Recommendation systems\n",
+    "- Discover similar products or items in order to suggest them to a user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
