added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -26,7 +26,10 @@
     "- Find related sections of text to read in order to provide a more accurate answer.\n",
     "\n",
     "### Recommendation systems\n",
-    "- Discover similar products or items in order to suggest them to a user."
+    "- Discover similar products or items in order to suggest them to a user.\n",
+    "\n",
+    "### Long-term memory\n",
+    "- Look up relevant snippets of conversation history so a chatbot remembers past interactions."
    ]
   },
   {
