added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -35,6 +35,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Retrieval Augmented Generation (RAG)\n",
+    "#### Vector databases are a key component of RAG, which typically involves searching by similarity to the query, retrieving the most relevant documents, and inserting them into the prompt as context. This lets you stay within what fits in the current context window, while avoiding spending money on wasted tokens by inserting irrelevant text documents in the context."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
