added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -95,13 +95,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### After executing this code, the embeddings variable will hold the numerical representation (embedding) of the input text, which can then be used in various NLP tasks or machine learning models. This process of retrieving or generating embeddings is sometimes referred to as document loading."
+    "#### After executing this code, the embeddings variable will hold the numerical representation (embedding) of the input text, which can then be used in various NLP tasks or machine learning models. This process of retrieving or generating embeddings is sometimes referred to as document loading.\n",
+    "\n",
+    "#### The term loading in this context refers to the act of computing or retrieving the numerical (vector) representations of text from a model and storing them in a variable for later use. This is distinct from the concept of chunking, which typically refers to breaking down a text into smaller, manageable pieces or chunks to facilitate processing. These two techniques are regularly used in conjunction with each other, as it’s often useful to break large documents up into pages or paragraphs to facilitate more accurate matching and to only pass the most relevant tokens into the prompt."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Hugging Face API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "\n",
+    "model_id = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "hf_token = os.getenv(\"HF_TOKEN\")\n",
+    "\n",
+    "api_url = \"https://api-inference.huggingface.co/\"\n",
+    "api_url += f\"pipeline/feature-extraction/{model_id}\"\n",
+    "headers = {\"Authorization\": f\"Bearer {hf_token}\"}\n",
+    "\n",
+    "def query(texts):\n",
+    "    response = requests.post(api_url, headers=headers,\n",
+    "    json={\"inputs\": texts,\n",
+    "    \"options\":{\"wait_for_model\":True}})\n",
+    "    return response.json()\n",
+    "\n",
+    "texts = [\"mickey mouse\",\n",
+    "        \"cheese\",\n",
+    "        \"trap\",\n",
+    "        \"rat\",\n",
+    "        \"ratatouille\"\n",
+    "        \"bus\",\n",
+    "        \"airplane\",\n",
+    "        \"ship\"]\n",
+    "\n",
+    "output = query(texts)\n",
+    "output"
+   ]
   }
  ],
  "metadata": {
