--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -161,6 +161,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Smaller chunks of text will be more specific in terms of location in vector space and as such might be more useful when you need close similarity. For example, isolating smaller sections of text from a novel may better separate comedic from tragic moments in the story, whereas embedding a whole page or chapter may mix both together. However, making the chunks of text too small might also cause them to lose meaning if the text is cut off in the middle of a sentence or paragraph. Much of the art of working with vector databases is in the way you load the document and break it into chunks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
