added new models

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Vector-Db.ipynb
@@ -168,6 +168,79 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Document Loading\n",
+    "\n",
+    "#### One common use case of AI is to be able to search across documents based on similarity to the text of the user query. For example, you may have a series of PDFs representing your employee handbook, and you want to return the correct snippet of text from those PDFs that relates to an employee question. The way you load documents into your vector database will be dictated by the structure of your documents, how many examples you want to return from each query, and the number of tokens you can afford in each prompt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=100, # 100 tokens\n",
+    "    chunk_overlap=20, # 20 tokens of overlap\n",
+    "    )\n",
+    "\n",
+    "text = \"\"\"\n",
+    "Welcome to the \"Unicorn Enterprises: Where Magic Happens\"\n",
+    "Employee Handbook! We're thrilled to have you join our team\n",
+    "of dreamers, doers, and unicorn enthusiasts. At Unicorn\n",
+    "Enterprises, we believe that work should be as enchanting as\n",
+    "it is productive. This handbook is your ticket to the\n",
+    "magical world of our company, where we'll outline the\n",
+    "principles, policies, and practices that guide us on this\n",
+    "extraordinary journey. So, fasten your seatbelts and get\n",
+    "ready to embark on an adventure like no other!\n",
+    "\n",
+    "...\n",
+    "\n",
+    "As we conclude this handbook, remember that at Unicorn\n",
+    "Enterprises, the pursuit of excellence is a never-ending\n",
+    "quest. Our company's success depends on your passion,\n",
+    "creativity, and commitment to making the impossible\n",
+    "possible. We encourage you to always embrace the magic\n",
+    "within and outside of work, and to share your ideas and\n",
+    "innovations to keep our enchanted journey going. Thank you\n",
+    "for being a part of our mystical family, and together, we'll\n",
+    "continue to create a world where magic and business thrive\n",
+    "hand in hand!\n",
+    "\"\"\"\n",
+    "\n",
+    "chunks = text_splitter.split_text(text=text)\n",
+    "print(chunks[0:3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The relevance of the chunk of text provided to the prompt will depend heavily on your chunking strategy. Shorter chunks of text without overlap may not contain the right answer, whereas longer chunks of text with too much overlap may return too many irrelevant results and confuse the LLM or cost you too many tokens."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Memory Retrieval with FAISS\n",
+    "#### Now that you have your documents processed into chunks, you need to store them in a vector database. It is common practice to store vectors in a database so that you do not need to recompute them, as there is typically some cost and latency associated with doing so. If you don’t change your embedding model, the vectors won’t change, so you do not typically need to update them once stored. You can use an open source library to store and query your vectors called FAISS, a library developed by Facebook AI that provides efficient similarity search and clustering of dense vectors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Although our code is working end to end now, it doesn’t make sense to be collecting embeddings and creating a vector database with every query. Even if you’re using an open source model for embeddings, there will be a cost in terms of compute and latency. You can save the FAISS index to a file using the faiss.write_index function:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
