added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -79,6 +79,20 @@
     "# Commit the job\n",
     "job.commit()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What strategies have you implemented to optimize cost while using AWS  services?\n",
+    "\n",
+    "- Utilizing Pipemode and streaming data from S3 instead of using an instance\n",
+    "- Changing the dataformat to RecordIOprotobuff\n",
+    "- Auto Scaling: Use Auto Scaling groups to automatically scale resources up or down based on demand.\n",
+    "- Spot Instances: Utilize EC2 Spot Instances for non-critical, flexible workloads to benefit from lower pricing.\n",
+    "- Elastic Inference: Use Elastic Inference to attach just the right amount of inference acceleration to your EC2 or SageMaker instances, reducing the need for more powerful and expensive GPUs.\n",
+    "- Distributed Training: Optimize distributed training across multiple, lower-cost GPUs instead of using a single, high-cost GPU instance.\n"
+   ]
   }
  ],
  "metadata": {
