added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -140,6 +140,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Python Profiency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
