added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -141,13 +141,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Profiency"
+    "# Python Profiency\n",
+    "## What are your favorite Python libraries for data analysis and why?\n",
+    "- Pandas\n",
+    "- Seaborn\n",
+    "- Matplotlib\n",
+    "- Numpy\n",
+    "- Scikit-Learn\n",
+    "- Scipy\n",
+    "\n",
+    "## How do you handle memory management in Python for large datasets?\n",
+    "- Use Efficient Data Structures: Opt for data structures that are memory efficient. For example, using Pandas’ categorical data type for categorical data can significantly reduce memory usage compared to object types.\n",
+    "- Chunk Processing: Process large datasets in chunks rather than loading the entire dataset into memory at once. Libraries like Pandas support chunking directly via parameters like chunksize in read_csv().\n",
+    "- Use Dask or Vaex: These libraries are designed for parallel computing and can handle large datasets that don’t fit into memory by breaking the data into chunks and processing these chunks in parallel.\n",
+    "- Memory Profiling: Tools like memory_profiler can be used to monitor the memory usage of your Python script at runtime. Identifying memory hotspots can help you optimize them.\n",
+    "- Garbage Collection: Force the garbage collector to release unreferenced memory more aggressively with gc.collect() especially after deleting large data structures.\n",
+    "- Optimize Data Types: When using Pandas, optimize data types manually by converting columns to more appropriate types (like changing float64 to float32 or integers to uint8 if possible)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
