--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -156,7 +156,17 @@
     "- Use Dask or Vaex: These libraries are designed for parallel computing and can handle large datasets that don’t fit into memory by breaking the data into chunks and processing these chunks in parallel.\n",
     "- Memory Profiling: Tools like memory_profiler can be used to monitor the memory usage of your Python script at runtime. Identifying memory hotspots can help you optimize them.\n",
     "- Garbage Collection: Force the garbage collector to release unreferenced memory more aggressively with gc.collect() especially after deleting large data structures.\n",
-    "- Optimize Data Types: When using Pandas, optimize data types manually by converting columns to more appropriate types (like changing float64 to float32 or integers to uint8 if possible)."
+    "- Optimize Data Types: When using Pandas, optimize data types manually by converting columns to more appropriate types (like changing float64 to float32 or integers to uint8 if possible).\n",
+    "\n",
+    "## Describe a situation where you used Python to automate a repetitive task.\n",
+    "- Created a chron job on a kubernetes pod that automtically updated workflows through a python script\n",
+    "\n",
+    "## How do you approach debugging and error handling in Python?\n",
+    "- Try-Except Blocks: These are used to catch and handle exceptions that may cause the program to crash. I ensure to catch specific exceptions to avoid masking other bugs.\n",
+    "- Custom Exceptions: For larger applications, I define custom exception classes to handle specific error conditions more gracefully.\n",
+    "- Unit Testing: I write unit tests with frameworks like unittest or pytest to catch errors early and ensure each part of the program functions correctly as changes are made.\n",
+    "- Print Statements: Simple yet effective for quick checks. I insert print statements to display variable values and flow of execution at different points in the code.\n",
+    "- Logging: For more complex applications, I use Python’s logging module to log detailed debug information. This allows me to control the level of verbosity and is particularly useful for production environments where print statements are not suitable."
    ]
   },
   {
