added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -173,6 +173,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Experience with LLM (Large Language Models) and NLP (Natural Language Processing)\n",
+    "\n",
+    "## Can you explain how LLMs differ from traditional machine learning models?\n",
+    "- TM: Often designed for specific tasks, using algorithms like linear regression, decision trees, or SVMs. These models require feature engineering and explicit programming for specific outcomes.\n",
+    "- LLMs: Based on neural networks, particularly transformers, which allow them to process and generate natural language. They learn directly from vast amounts of text data without needing explicit feature engineering.\n",
+    "- TM: Typically handle structured data (e.g., tables). The quality and structure of the data are critical, and preprocessing steps are necessary to convert raw data into a suitable format.\n",
+    "- LLMS Primarily handle unstructured data (e.g., text). They are adept at understanding and generating human language by training on diverse and large datasets of text.\n",
+    "- TM: Often require less computational resources for training and can be trained on smaller datasets. They may need manual tuning of features and model parameters.\n",
+    "- LLMS: Require substantial computational resources and large datasets for training. They automatically learn features from the data due to their deep learning nature.\n",
+    "- TM: Typically excel at tasks they are specifically designed for but may struggle to generalize across unrelated tasks without retraining or significant adjustments.\n",
+    "- LLMS: Designed to generalize across a wide variety of tasks without task-specific modifications. They can perform tasks like translation, summarization, question answering, and more, often with no or minimal task-specific training.\n",
+    "- LLMS Extremely versatile and can handle multiple types of tasks with the same underlying model. This adaptability is a significant advancement over traditional models.\n",
+    "\n",
+    "## Discuss your experience with tokenization and how it affects model performance.\n",
+    "#### Tokenization is a crucial preprocessing step in natural language processing (NLP) that involves breaking down text into smaller units, such as words, subwords, or characters. My experience with tokenization has shown its significant impact on model performance in various ways:\n",
+    "- Reduced Vocabulary Size: Subword tokenization helps manage vocabulary size, reducing model complexity and improving memory efficiency.\n",
+    "- Enhanced Context Understanding: Finer tokenization, like subwords, captures linguistic nuances better, aiding in more accurate text interpretation and generation.\n",
+    "- Training Speed: Efficient tokenization streamlines training, speeds up model convergence, and reduces resource consumption.\n",
+    "- Improved Generalization: Appropriate tokenization enhances a model's ability to perform well across different tasks and unseen data by capturing essential language units.\n",
+    "\n",
+    "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##"
    ]
   }
