added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -193,7 +193,8 @@
     "- Training Speed: Efficient tokenization streamlines training, speeds up model convergence, and reduces resource consumption.\n",
     "- Improved Generalization: Appropriate tokenization enhances a model's ability to perform well across different tasks and unseen data by capturing essential language units.\n",
     "\n",
-    "##"
+    "## How do you approach sentiment analysis in text data?\n",
+    "#### "
    ]
   },
   {
